feat: containerizing